--- a/eaton.frontend/src/components/list/css/views/_view-related-products.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-related-products.scss
@@ -4,18 +4,10 @@
 
   &__text {
     padding-left: 15px;
-    padding-bottom: 45px;
+    padding-bottom: 15px;
 
-    @include media-mobile-only {
-      padding-bottom: 15px;
-    }
-  }
-
-  &__description {
-    padding-top: 10px;
-
-    @include media-mobile-only {
-      padding-top: 5px;
+    h3 {
+      margin-bottom: 5px;
     }
   }
 
