--- a/eaton.frontend/src/components/product-detail-card/css/product-detail-card.scss
+++ b/eaton.frontend/src/components/product-detail-card/css/product-detail-card.scss
@@ -20,11 +20,15 @@
 
   &__related-products-header {
     padding-left: 15px;
-    margin-bottom: 45px;
+    margin-bottom: 25px;
+  }
+
+  &__related-products-title {
+    margin-bottom: 0;
   }
 
   &__related-products-description {
-    margin-top: 10px;
+    margin-top: 5px;
   }
 
 }
