fix for EATON-652

--- a/eaton.frontend/src/components/product-specifications/css/product-specifications.scss
+++ b/eaton.frontend/src/components/product-specifications/css/product-specifications.scss
@@ -9,7 +9,8 @@
 // Import SubModules
 .product-specifications {
 
-  margin: 60px 0;
+  margin-top: 60px;
+  margin-bottom: 40px;
 
   .value-type-document {
     // empty selector for future reference
