[EATON-658] Media Gallery - Spacing component

--- a/eaton.frontend/src/shared/module-product-card/css/module-product-card.scss
+++ b/eaton.frontend/src/shared/module-product-card/css/module-product-card.scss
@@ -75,5 +75,13 @@
     &__actions {
       text-align: left;
     }
+
+    &__links {
+      padding-bottom: 0;
+      
+      ul {
+        margin-bottom: 0;
+      }
+    }
   }
 }
