--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
@@ -22,8 +22,8 @@
                 <!-- End: Rendition Image Component -->
               </div>
               <div class="listdefault__content">
-                <p class="b-eyebrow-small">${ slider.title }</p>
-                <p class="b-heading-h5">${ slider.text }</p>
+                <p class="listdefault__eyebrow b-eyebrow-small">${ slider.title }</p>
+                <p class="listdefault__title b-heading-h5">${ slider.text }</p>
                 <p class="category-item-date"><em>${ slider.date_text }</em></p>
               </div>
             </div>
