[EATON-664] Fix Lint Warnings

--- a/eaton.frontend/src/components/ttil/css/views/_view-feature-block.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-feature-block.scss
@@ -18,7 +18,7 @@
 
   &__description {
     padding-top: 10px;
-    padding-bottom: $spacing__sm
+    padding-bottom: $spacing__sm;
   }
 
   &__text-container {
