--- a/eaton.frontend/src/shared/module-results-list/css/_results-list.scss
+++ b/eaton.frontend/src/shared/module-results-list/css/_results-list.scss
@@ -32,7 +32,7 @@
   // MediaQuery: Desktop & Desktop Large
   //-----------------------------------
   @include media-desktop-and-up {
-    margin-bottom: $spacing__lg;
+    margin-bottom: $spacing__md;
   }
 
 }
