[EATON-644] CR Priority 7 - Media Gallery (authored) - Mobile - Download and Zoom icons should bottom-align to the image

--- a/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
@@ -157,6 +157,10 @@
       // empty selector for future reference
     }
 
+    &__slide-utility {
+      bottom: -3px; // Align the icons to the bottom of the image in mobile
+    }
+
     // Dot Navigation - Preview Carousel
     //------------------------------------
     &__dots {
