--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -30,14 +30,18 @@
 @media screen and (max-width: 991px) { .header-utility-nav { position: fixed; bottom: 0; z-index: 113; /* Higher Stacking order than Primary Nav but Less than Search */ width: 100%; right: 0; opacity: 0; visibility: hidden; -webkit-transition: opacity 0.5s ease-in-out; transition: opacity 0.5s ease-in-out; padding: 0; }
   .header-utility-nav .container { padding: 0; }
   .header-utility-nav__row { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; margin: 0; }
-  .header-utility-nav__toggle-selector { padding: 25px 0 25px 30px; -webkit-box-flex: 1; -webkit-flex-grow: 1; -ms-flex-positive: 1; flex-grow: 1; background: #333F48; }
+  .header-utility-nav__toggle-selector { padding: 20px 30px; -webkit-box-flex: 1; -webkit-flex-grow: 1; -ms-flex-positive: 1; flex-grow: 1; background: #333F48; }
   .header-utility-nav__sign-in { text-align: center; padding: 0 30px; -webkit-flex-basis: 80px; -ms-flex-preferred-size: 80px; flex-basis: 80px; }
   .header-utility-nav__signin { display: none; }
-  .header-utility-nav .icon.icon-globe { margin-right: 5px; } }
+  .header-utility-nav .open-country-selector { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
+  .header-utility-nav__language { display: block; }
+  .header-utility-nav .icon.icon-globe { margin-right: 5px; }
+  .header-utility-nav .icon.icon-chevron-down { display: none; } }
 
 @media screen and (min-width: 992px) { .header-utility-nav { position: relative; z-index: 112; }
   .header-utility-nav__row { padding: 0 15px; }
   .header-utility-nav__toggle-selector { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
+  .header-utility-nav__label { display: inline; }
   .header-utility-nav .icon { margin-right: 5px; } }
 
 .header-primary-nav { position: relative; z-index: 112; background: #FFF; -webkit-transition: height 0.3s ease-in-out; transition: height 0.3s ease-in-out; }
