--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/layout/grid-3-column-control/static_grid-3-column-control.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/layout/grid-3-column-control/static_grid-3-column-control.html
@@ -8,17 +8,32 @@
     <div class="row">
       <!--/* Include Parsys - Column One */-->
       <div class="col-xs-12 col-md-4 eaton-grid-control__column">
-          <sly data-sly-resource="${@path='col1-par', resourceType='wcm/foundation/components/parsys'}" />
+          <div data-sly-unwrap="${!wcmmode.edit}">
+            <sly data-sly-resource="${'col1-par-divider' @ resourceType='eaton/static-components/general/divider'}" />
+          </div>
+          <div data-sly-unwrap="${!wcmmode.edit}">
+            <sly data-sly-resource="${@path='col1-par', resourceType='wcm/foundation/components/parsys'}" />
+          </div>
       </div>
 
       <!--/* Include Parsys - Column Two */-->
       <div class="col-xs-12 col-md-4 eaton-grid-control__column">
+        <div data-sly-unwrap="${!wcmmode.edit}">
+          <sly data-sly-resource="${'col2-par-divider' @ resourceType='eaton/static-components/general/divider'}" />
+        </div>
+        <div data-sly-unwrap="${!wcmmode.edit}">
           <sly data-sly-resource="${@path='col2-par', resourceType='wcm/foundation/components/parsys'}" />
+        </div>
       </div>
 
       <!--/* Include Parsys - Column Three */-->
       <div class="col-xs-12 col-md-4 eaton-grid-control__column">
+        <div data-sly-unwrap="${!wcmmode.edit}">
+          <sly data-sly-resource="${'col3-par-divider' @ resourceType='eaton/static-components/general/divider'}" />
+        </div>
+        <div data-sly-unwrap="${!wcmmode.edit}">
           <sly data-sly-resource="${@path='col3-par', resourceType='wcm/foundation/components/parsys'}" />
+        </div>
       </div>
     </div>
   </div>
