--- a/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
@@ -29,7 +29,7 @@
         padding: 15px 0;
 
         .category-item-date--padding {
-          padding-bottom: 0;
+          padding-bottom: 30px;
         }
       }
     }
