--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-specifications/css/product-specifications.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-specifications/css/product-specifications.css
@@ -11,7 +11,7 @@
  */
 
 
-.product-specifications { margin-bottom: 40px; }
+.product-specifications { margin-top: 60px; margin-bottom: 40px; }
 
 .product-specifications .value-type-link { margin-right: 1rem; }
 
