--- a/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
@@ -55,7 +55,7 @@
 
     &__title {
       @include body-copy--desktop;
-      line-height: 3rem;
+      // line-height: 3rem;
       position: relative;
       top: -5px;
     }
