--- a/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
@@ -54,7 +54,7 @@
     }
 
     &__title {
-      @include body-copy--desktop;
+      @include body-copy--mobile;
       // line-height: 3rem;
       position: relative;
       top: -5px;
