--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
@@ -99,6 +99,16 @@
   .eaton-header--fixed .eaton-search--default__form-submit { padding-right: 0; }
   .eaton-search--default__result-item { line-height: 3rem; } }
 
+.mega-menu__col .eaton-search textarea.form-control { font-size: 1.6rem; padding: 11px 0 10px 10px; }
+
+@media (min-width: 768px) and (max-width: 1199px) { .mega-menu__col .eaton-search textarea.form-control { height: 67px; } }
+
+@media (min-width: 1200px) { .mega-menu__col .eaton-search textarea.form-control { height: auto; } }
+
+.mega-menu__col .eaton-search .eaton-search--default__form-input { font-size: 1.6rem; }
+
+.mega-menu__col .eaton-search .eaton-search--inline__form-submit { padding: 10px 20px 10px 8px; }
+
 .eaton-search .form-control { -webkit-appearance: none; -moz-appearance: none; appearance: none; border: 0; border-radius: 0; height: auto; -webkit-box-shadow: none; box-shadow: none; }
 
 .eaton-search .form-control:focus { outline: none; }
