--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-box/views/view-inline.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-box/views/view-inline.html
@@ -11,14 +11,13 @@
           autocomplete="off"
           target="${data.form.isExternal == true ? '_blank' : '_self'}">
       <div class="form-group">
-        <label for="mega-menu-search" class="sr-only">${data.header}</label>
+        <label for="mega-menu-search-inline" class="sr-only">${data.header}</label>
           <textarea rows="1" 
-                     id="mega-menu-search"
+                     id="mega-menu-search-inline"
                     name="search-term"
                     class="form-control eaton-search--default__form-input"
                     placeholder="${data.form.placeholder}"
                     required="required"></textarea>
-          <input type="text" name="search-term" class="form-control eaton-search--inline__form-input" id="mega-menu-search" placeholder="${data.form.placeholder}">
 
           <div data-sly-test="${data.form.isExternal}" class="eaton-search--inline__form-external">
             <span class="sr-only">Submit form in new Tab</span>
