--- a/eaton.frontend/src/components/search-box/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-default.scss
@@ -268,6 +268,7 @@
   textarea.form-control{
     font-size: 1.6rem;
     padding: 11px 0 10px 10px;
+    color: #999;
 
     @media (min-width: 768px) and (max-width: 1199px){
       height: 67px;
