--- a/eaton.frontend/src/shared/renditions/css/_rendition-background.scss
+++ b/eaton.frontend/src/shared/renditions/css/_rendition-background.scss
@@ -2,6 +2,7 @@
 // EATON-81: Rendition Background Images
 //-----------------------------------
 .rendition-bg {
+  background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
   bottom: 0;
