--- a/eaton.frontend/src/components/list/css/views/_view-related-products.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-related-products.scss
@@ -19,9 +19,17 @@
 
   &__card {
     background-color: $color__secondary-gray6;
-    padding: 0 15px;
-    margin-right: 15px;
     border: 1px solid $color__secondary-gray5;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: $ratio__4-3;
+    position: relative;
+    margin-right: 15px;
+
+    .rendition-bg {
+      background-position: center center;
+      background-size: auto 100%;
+    }
   }
 
   &__info {
