--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-article-list-single-feature.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-article-list-single-feature.html
@@ -1,9 +1,10 @@
 <div class="eaton-list-component article-list-single-feature container" data-sly-use.data="${'../data/view-article-list-single-data.js' @testdata=properties.testdata}">
     <div class="row article-list-single-feature__container">
         <div class="col-xs-12 col-md-6 article-list-single-feature__single">
-            <a href="${data.single_feature_card.cta.url}" target="${data.single_feature_card.cta.target}" class="article-list-single-feature__link equal-height-row tablet-card">
+            <a href="${data.single_feature_card.cta.url}" target="${data.single_feature_card.cta.target}"
+              class="article-list-single-feature__link equal-height-row tablet-card">
                 <div class="related-category--tablet-left category__image">
-                    <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
+                    <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-background.html">
                         <sly data-sly-call="${ tpl.module @ data=data.single_feature_card.image }"></sly>
                     </sly>
                 </div>
@@ -30,5 +31,5 @@
         <div class="col-xs-12 text-center featured-category__cta-container">
             <sly data-sly-resource="${'featured-article-ctabutton' @ resourceType='/apps/eaton/static-components/general/cta'}"></sly>
         </div>
-    </div>    
+    </div>
 </div>
