--- a/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
@@ -52,13 +52,13 @@
   }
 
   &__list-icon {
-    padding-right: 10px;
+    padding-left: 10px;
     font-size: 2.8rem;
     padding-top: 5px;
   }
 
   &__external-icon {
-    padding-right: 10px;
+    padding-left: 10px;
     font-size: 2.8rem;
     margin-top: 8px;
 
@@ -71,7 +71,7 @@
 
   &__download-text {
     width: 100%;
-    margin-left: 40px;
+    // margin-left: 40px;
     font-size: 1.8rem;
     margin-top: -10px;
 
