--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-vertical.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-vertical.html
@@ -14,21 +14,7 @@
           aria-label="Go to ${ item.title }"
           class="eaton-link-list-vertical__list-link"
           target="${ item.external_link ? '_blank' : '_self' }"
-          data-sly-attribute.download="${ item.document_download}">
-          <span class="eaton-link-list-vertical__list-text">
-            <i data-sly-test="${item.external_link}"
-              class="eaton-link-list-vertical__external-icon icon icon-link-external"
-              aria-hidden="true"></i>
-            <i data-sly-test="${ item.document_download }"
-              class="eaton-link-list-vertical__external-icon icon icon-download"
-              aria-hidden="true"></i>
-            ${ item.title }
-          </span>
-          <!--/* "Arrow-Right" icon should be displayed only when used over dark-themes (eg: Header & Footer) */-->
-          <i data-sly-test="${ !item.document_download }"
-            class="eaton-link-list-vertical__list-icon icon icon-chevron-right u-hide"
-            aria-hidden="true"></i>
-        </a>
+          data-sly-attribute.download="${ item.document_download}"><span class="eaton-link-list-vertical__list-text">${ item.title }</span></a>
 
         <div class="eaton-link-list-vertical__download-text"
           data-sly-test="${ item.document_download }">
