--- a/eaton.frontend/src/components/product-family-card/css/product-family-card.scss
+++ b/eaton.frontend/src/components/product-family-card/css/product-family-card.scss
@@ -39,7 +39,11 @@
   &__links {
     a {
       display: block;
-      margin-bottom: 0;
+      margin-bottom: 10px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 
@@ -73,6 +77,14 @@
 
     &__links {
       margin-bottom: 0;
+
+      a {
+        margin-bottom: 20px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
     }
   }
 }
