--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-vertical.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/link-list/views/view-vertical.html
@@ -14,7 +14,15 @@
           aria-label="Go to ${ item.title }"
           class="eaton-link-list-vertical__list-link"
           target="${ item.external_link ? '_blank' : '_self' }"
-          data-sly-attribute.download="${ item.document_download}"><span class="eaton-link-list-vertical__list-text">${ item.title }</span></a>
+          data-sly-attribute.download="${ item.document_download}"><span class="eaton-link-list-vertical__list-text">${ item.title }
+          <i data-sly-test="${item.external_link}"
+            class="eaton-link-list-vertical__external-icon icon icon-link-external"
+            aria-hidden="true"></i>
+          <i data-sly-test="${ item.document_download }"
+            class="eaton-link-list-vertical__external-icon icon icon-download"
+            aria-hidden="true"></i>
+
+          </span></a>
 
         <div class="eaton-link-list-vertical__download-text"
           data-sly-test="${ item.document_download }">
