--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
@@ -111,7 +111,7 @@
 
 .faceted-navigation__view-more-values { font-size: 1.4rem; font-weight: normal; color: #005EB8; padding: 0; }
 
-.faceted-navigation .b-button-facets-apply { width: 100%; max-width: unset; }
+.faceted-navigation .b-button-facets-apply { width: 100%; max-width: none; }
 
 @media screen and (max-width: 991px) { .faceted-navigation { display: none; padding: 6rem 3rem; }
   .facets-open .faceted-navigation { position: fixed; top: 0; display: block; width: 100%; left: 0; padding-top: 5.2rem; bottom: 0px; padding-bottom: 7.3rem; z-index: 10; overflow-y: auto; background-color: #FFF; }
@@ -121,7 +121,8 @@
   .faceted-navigation .mobile-header { display: none; }
   .faceted-navigation__view-more-values { padding-top: 8px; }
   .faceted-navigation__header { margin: .9rem 0; }
-  .faceted-navigation__apply { position: fixed; bottom: 0; left: 0; width: 100%; } }
+  .faceted-navigation__apply { position: fixed; bottom: 0; left: 0; width: 100%; }
+  .faceted-navigation__apply .b-button-facets-apply { width: 100%; max-width: none; } }
 
 .faceted-navigation .faceted-navigation-filters { padding: 2rem 0; border-bottom: 1px solid #EEF0F2; }
 
